# geode-ai-mod

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  about.md  geode.cmake  mod.json
.github/workflows/: build.yml
include/: ai_controller.hpp  neat.hpp  vision_system.hpp
src/: main.cpp
